--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "axios": "^0.20.0",
     "core-js": "^3.6.5",
     "moment": "^2.29.0",
-    "unfetch": "^4.1.0",
     "vue": "^2.6.11",
+    "vue-notification": "^1.3.20",
     "vue-router": "^3.2.0",
     "vue2-perfect-scrollbar": "^1.5.0",
     "vuedraggable": "^2.24.1",
