--- a/build.config.json
+++ b/build.config.json
@@ -1,5 +1,5 @@
 {
-    "folderName": "frontend-task-rkanik",
+    "folderName": "frontend-task-xs-rkanik",
     "folderPath": "../../",
     "server": {
         "baseUrl": "http://localhost/",
